@@ -11,6 +11,12 @@ Tom Moertel (tom@moertel.com)
 - Strings in counterexamples are now printed in double-quoted form.
   This makes it easy to see invisibles.
 
+- You can now attach notes and variable values to trials.  In the
+  event the trial fails, the notes will be emitted as part of the
+  counterexample to aid in debugging.
+      See Test::LectroTest::TestRunner::testcontroller for the
+  documentation on the note() and dump() methods.
+
 ** Fixes
 
 
